--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Walter White, Chemist</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
   <div id="wrapper">
